@@ -2,30 +2,29 @@ grails.servlet.version = "3.0"
 grails.project.class.dir = "target/classes"
 grails.project.test.class.dir = "target/test-classes"
 grails.project.test.reports.dir = "target/test-reports"
-grails.project.work.dir = "target"
 grails.project.target.level = 1.6
 grails.project.source.level = 1.6
 //grails.project.war.file = "target/${appName}-${appVersion}.war"
 
-// uncomment (and adjust settings) to fork the JVM to isolate classpaths
-//grails.project.fork = [
-//   run: [maxMemory:1024, minMemory:64, debug:false, maxPerm:256]
-//]
-// Increase heap and permgen in run-war mode
-grails.tomcat.jvmArgs = ["-Djava.awt.headless=true", "-Xms512m", "-Xmx768m", "-XX:MaxPermSize=320m"]
-grails.tomcat.nio = true
+grails.project.fork = [
+    //  compile: [maxMemory: 256, minMemory: 64, debug: false, maxPerm: 256, daemon:true],
+    test: false,
+    run: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve:false],
+    war: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve:false],
+    console: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256]
+]
 
+grails.project.dependency.resolver = "maven"
 grails.project.dependency.resolution = {
-    // inherit Grails' default dependencies
     inherits("global") {}
-    log "error"
+    log "warn"
     checksums true
     legacyResolve false
 
     repositories {
         inherits true
-
         grailsCentral()
+        mavenLocal()
         mavenCentral()
     }
 
@@ -33,21 +32,17 @@ grails.project.dependency.resolution = {
     }
 
     plugins {
-        build ":tomcat:$grailsVersion"
+        build ":tomcat:8.0.20"
 
-        compile ':cache:1.1.1'
+        runtime (":hibernate4:4.3.8.1") {
+            export = false
+        }
 
-        runtime ":hibernate:$grailsVersion"
-        compile ":resources:1.2.7"
-        compile ":jquery:1.10.2"
-        compile ":twitter-bootstrap:2.3.2"
-        compile ":less-resources:1.3.3.2"
-        compile ":database-migration:1.3.6"
+        compile ":database-migration:1.4.0"
 
-        compile ":crm-contact-ui:2.0.0"
-        compile ":crm-content-ui:2.0.0"
-        compile ":crm-security-shiro:2.0.0"
-        compile ":crm-i18n:2.0.0"
-        compile ":crm-ui-bootstrap:2.0.0"
+        compile ":crm-security-shiro:2.4.0"
+        compile ":crm-i18n:2.4.0"
+        compile ":crm-contact-ui:2.4.0"
+        compile ":crm-content-ui:2.4.0"
     }
 }
